--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,10 @@ spring.application.name=cassandra
 
 spring.data.cassandra.contact-points=127.0.0.1
 spring.data.cassandra.port=9042
-spring.data.cassandra.keyspace-name=music_pop_db
+spring.data.cassandra.local-datacenter=datacenter1
+spring.data.cassandra.keyspace-name=pop_divas
 spring.data.cassandra.schema-action=none
-spring.data.cassandra.username=cassandra
-spring.data.cassandra.password=cassandra
+
+
+
 
